update correction contraste couleur

--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
-
+.keywords {
+    display: none;
+}
 a,
 button {
     transition: all .3s ease-in-out;
@@ -100,7 +102,7 @@ a:hover {
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: #FFFFFF;
 }
 
 .d-bloc button:hover {
@@ -651,7 +653,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #FFFFFF!important;
 }
 
 .container {
@@ -723,7 +725,7 @@ h3 {
 }
 
 h1 {
-    color: #333333!important;
+    color: #FFFFFF;
 }
 
 h4 {
@@ -771,7 +773,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #872B00;
 }
 
 .tc-white {
@@ -779,12 +781,10 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
     color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
     color: #FFFFFF!important;
 }
 
